# 3cat_show_downloader

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  clippy.toml
.claude/: settings.local.json
.github/workflows/: release.yml  tag.yml  tests.yml
src/: cli.rs  downloader.rs  episodes.rs  error.rs  ffmpeg.rs  id_retriever.rs  lib.rs  main.rs  media_resolver.rs  models.rs  scheduler.rs  subtitle_cleaner.rs  subtitles_fix.rs  yt_dlp.rs
src/api_structs/: mod.rs
src/http_client/: error.rs  mock.rs  mod.rs
src/lib/: downloader.rs  error.rs  id_retriever.rs  lib.rs  models.rs  subtitles_fix.rs
src/lib/http_client/: error.rs  mock.rs  mod.rs
src/lib/info_3cat/: api_structs.rs  mod.rs
src/lib/utils/: error.rs
src/movie/: api_structs.rs  mod.rs
src/tv_show/: api_structs.rs  episodes.rs  mod.rs
